# CSSO_MILEA_BIANCA_2025

homeowrk01/Copy/: fisiereCopiate.txt  sumar.txt
homeowrk01/H1/: h1.cpp
homeowrk01/H1/Input/: copy.ini
homework02/: CMakeLists.txt  b.h  c.h  d.h  e.h  error.h  f.h  global.h  main.cpp
